# nextjs-fastapi

./: package.json
api/: pyproject.toml  requirements.txt
api/makers_platform/: __init__.py  __main__.py  constants.py  settings.py
api/makers_platform/web/: application.py
api/makers_platform/web/api/: router.py
