[tool.poetry]
name = "makers_platform"
version = "0.1.0"
description = ""
authors = ["Dinuda Yaggahavita <63149008+Dinuda@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
fastapi = "^0.111.0"
boto3 = "^1.28.51"
uvicorn = { version = "^0.22.0", extras = ["standard"] }
pydantic = "^2.7.0"
ujson = "^5.8.0"
sqlalchemy = { version = "^2.0.21", extras = ["mypy", "asyncio"] }
aiomysql = "^0.1.1"
mysqlclient = "^2.2.0"
sentry-sdk = "^1.31.0"
loguru = "^0.7.2"
aiokafka = "^0.8.1"
requests = "^2.31.0"
langchain = "^0.2.5"
openai = "^1.34.0"
wikipedia = "^1.4.0"
replicate = "^0.26.0"
tiktoken = "^0.7.0"
grpcio = "^1.58.0"
pinecone-client = "^2.2.4"
python-multipart = "^0.0.7"
aws-secretsmanager-caching = "^1.1.1.5"
botocore = "^1.31.51"
stripe = "^5.5.0"
cryptography = "^41.0.4"
httpx = "^0.25.0"
langchain-community = "^0.2.5"
pydantic-settings = "^2.3.3"
litellm = "^1.40.15"
lanarky = "^0.8"

[tool.poetry.dev-dependencies]
autopep8 = "^2.0.4"
pytest = "^7.4.2"
flake8 = "~6.0.0"
mypy = "^1.5.1"
isort = "^5.12.0"
pre-commit = "^3.4.0"
wemake-python-styleguide = "^0.18.0"
black = "^23.9.1"
autoflake = "^2.2.1"
pytest-cov = "^4.1.0"
anyio = "^3.7.1"
pytest-env = "^0.8.2"

[tool.poetry.group.dev.dependencies]
dotmap = "^1.3.30"
pytest-mock = "^3.10.0"
pytest-asyncio = "^0.21.0"
mypy = "^1.4.1"
types-requests = "^2.31.0.1"
types-pytz = "^2023.3.0.0"

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["makers_platform"]

[tool.mypy]
strict = true
ignore_missing_imports = true
allow_subclassing_any = true
allow_untyped_calls = true
pretty = true
show_error_codes = true
implicit_reexport = true
allow_untyped_decorators = true
warn_unused_ignores = false
warn_return_any = false
namespace_packages = true
exclude = "tests"

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore:.*unclosed.*:ResourceWarning",
    "ignore::ImportWarning",
]
env = [
    "makers_platform_DB_BASE=makers_platform_test",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
